--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -10,3 +10,5 @@ jobs:
         uses: snyk/actions/maven@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --file=backend/pom.xml
