--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -11,4 +11,4 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --file=backend/pom.xml
+          args: --file=backend/RateLimiter/pom.xml
